--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.11",
+    "mime-types": "^2.1.27",
     "mongoose": "^5.5.2",
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "nodemailer": "^6.1.1",
